0.235 2025-03-12
  [Bug Fix]
    * Fix a bug that IO::File#read method's $legnth is not set to the default value.
  [Changes]
    * IO::File#close throws an exception when the file is not opened.
0.234 2025-02-21
  [Test Internal Chnages]
    * Do not use Fn#grep method.
    
0.233 2025-01-27
  [Requirement Changes]
    * Require SPVM 0.990042.
    * Require SPVM::Regex 0.246.
  [Test Improvement]
    * Call Fn#destroy_runtime_permanent_vars method in the end of tests.
    
0.232 2023-11-29
  [Test Fix]
    * Fix a test bug of IPv6 test skip.
  
0.231 2023-10-22
  [Changes]
    * Add IO::Socket#Sockaddr field.
    * Throw an exception when PeerAddr and Listen option in IO::Socket::IP#init  are used together.
    * Throw an exception when Peer and Local option in IO::Socket::Unix#init are used together.
   
  [Incompatible Changes]
    * Change arguments of IO::Socket#connect method.
      [Before]
        protected method connect : void ($sockaddr : Sys::Socket::Sockaddr);
      [After]
        protected method connect : void ();
    * Change arguments of IO::Socket#bind method.
      [Before]
        protected method bind : void ($sockaddr : Sys::Socket::Sockaddr);
      [After]
        protected method bind : void ();
    
0.230 2023-10-22
  [Changes]
    * Operate non-blocking getaddrinfo using Net::DNS::Native.
    
  [Requirement Changes]
    * Require SPVM::Net::DNS::Native 0.001.
  
  [New Features]
    * Add IO::Socket::IP#create_sockaddr method.
    * Add IO::Socket::IP::Import::IPv4#create_sockaddr method.
    * Add IO::Socket::IP::Import::IPv6#create_sockaddr method.

0.229 2023-10-19
  [Requirement Changes]
    * Require SPVM::Go 0.008.
  [Test Improvement]
    * Add tests for IO::Socekt::IP#accept method.
    * Add tests for accept timeout and read timeout for IO::Socket::IP.
    
0.228 2023-10-18
  [Requirement Changes]
    * Require SPVM::Sys 0.528.
  [Bug Fix]
    * Fix a bug checking Errno->EINTR instead of Sys::Socket::Errno->EINTR.
      