@@ -1,8 +1,11 @@
 0.235 2025-03-12
   [Bug Fix]
     * Fix a bug that IO::File#read method's $legnth is not set to the default value.
+    * Fix a bug that a file handle is not closed in the object destruction.
+    
   [Changes]
     * IO::File#close throws an exception when the file is not opened.
+    * Add DESTROY method to IO::Handle and remove that in IO::Socket.
 0.234 2025-02-21
   [Test Internal Chnages]
     * Do not use Fn#grep method.
